feat: local swagger

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -41,6 +41,9 @@ COPY ./pyproject.toml ./uv.lock ./alembic.ini /app/
 
 COPY ./app /app/app
 
+# 复制静态文件
+COPY ./static /app/static
+
 # Sync the project
 # Ref: https://docs.astral.sh/uv/guides/integration/docker/#intermediate-layers
 RUN --mount=type=cache,target=/root/.cache/uv \
