--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "pandas>=2.3.3",
     "numpy>=2.2.6",
     "scipy>=1.15.3",
+    "matplotlib>=3.5.0",
+    "vqf>=2.0.0",
 ]
 
 [tool.uv]
