1213 fix-同步配置文件

--- a/.env
+++ b/.env
@@ -23,11 +23,11 @@ SMTP_SSL=False
 SMTP_PORT=587
 
 # Database (docker-compose defaults)
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=pgm-wz973xmtl1oms94lso.pg.rds.aliyuncs.com
 POSTGRES_PORT=5432
-POSTGRES_DB=app
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_DB=heygodata
+POSTGRES_USER=heygo
+POSTGRES_PASSWORD=HEYGOheygo2025
 
 SENTRY_DSN=
 
