feat: multiple env

--- a/.env
+++ b/.env
@@ -23,12 +23,23 @@ SMTP_SSL=False
 SMTP_PORT=587
 
 # Database (docker-compose defaults)
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
-POSTGRES_DB=app
+POSTGRES_DB=app_dev
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=changethis
 
+# Redis
+REDIS_URL=redis://redis:6379/0
+
+# SMS Service
+SMS_SERVICE=mock
+SMS_ACCESS_KEY=
+SMS_SECRET_KEY=
+SMS_SIGN_NAME=AI滑雪教练
+SMS_TEMPLATE_CODE=
+
+# Monitoring
 SENTRY_DSN=
 
 # Docker
@@ -39,8 +50,55 @@ EMAIL=admin@example.com
 USERNAME=admin
 HASHED_PASSWORD=$2y$10$8K1p/a0dL2L0.9VN0Df8Ce0xrXDC7g/SpRcNF6.dhJD.1V5SJqK2
 
-# CORS
-BACKEND_CORS_ORIGINS=http://localhost:5173
+# =============================================================================
+# 生产环境性能优化配置
+# =============================================================================
 
-# Redis
-REDIS_URL=redis://localhost:6379/0
+# Gunicorn 配置
+GUNICORN_WORKERS=
+GUNICORN_WORKER_CONNECTIONS=1000
+GUNICORN_MAX_REQUESTS=1000
+GUNICORN_MAX_REQUESTS_JITTER=50
+GUNICORN_TIMEOUT=120
+GUNICORN_KEEPALIVE=5
+GUNICORN_GRACEFUL_TIMEOUT=30
+GUNICORN_LOG_LEVEL=info
+
+# 数据库连接池配置
+DB_POOL_SIZE=20
+DB_MAX_OVERFLOW=10
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=3600
+DB_POOL_PRE_PING=True
+DB_ECHO=False
+
+# TimescaleDB 数据压缩配置
+TIMESCALE_COMPRESS_AFTER_DAYS=7
+TIMESCALE_COMPRESS_SEGMENT_BY=session_id
+TIMESCALE_COMPRESS_ORDER_BY="timestamp DESC"
+
+# TimescaleDB 数据保留配置
+TIMESCALE_RETENTION_SENSOR_DATA_DAYS=365
+TIMESCALE_RETENTION_METRICS_DATA_DAYS=730
+
+# TimescaleDB 连续聚合刷新配置
+TIMESCALE_REFRESH_INTERVAL_HOURS=1
+TIMESCALE_REFRESH_START_OFFSET_HOURS=3
+TIMESCALE_REFRESH_END_OFFSET_HOURS=1
+
+# PostgreSQL 性能参数
+POSTGRES_MAX_CONNECTIONS=200
+POSTGRES_SHARED_BUFFERS=256MB
+POSTGRES_EFFECTIVE_CACHE_SIZE=1GB
+POSTGRES_WORK_MEM=10MB
+POSTGRES_MAINTENANCE_WORK_MEM=128MB
+POSTGRES_WAL_BUFFERS=16MB
+POSTGRES_MIN_WAL_SIZE=1GB
+POSTGRES_MAX_WAL_SIZE=4GB
+POSTGRES_MAX_WORKER_PROCESSES=8
+POSTGRES_MAX_PARALLEL_WORKERS=8
+POSTGRES_MAX_PARALLEL_WORKERS_PER_GATHER=4
+
+# 性能监控配置
+ENABLE_QUERY_LOGGING=False
+SLOW_QUERY_THRESHOLD_MS=1000
